--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
  <head>
    <title>Tekno PC</title>
+  <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/teknopc/teknopc.github.io/main/css/style.css">
   </head>
   <body>
     <h3>
