--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <html>
  <head>
-   <title>Tekno PC</title>
-  <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/teknopc/teknopc.github.io/main/css/style.css">
+  <title>Tekno PC</title>
+  <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/teknopc/teknopc.github.io/main/css/mbg.css">
   </head>
   <body>
-    <h3>
-      Merhaba dünya
-    </h3>
+<div id="particle-container">
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+</div>
   </body>
 </html>
