--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <title>Tekno PC</title>
-  <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/teknopc/teknopc.github.io/main/css/mbg.css">
+  <link rel="stylesheet" type="text/css" href="css/mbg.css">
   </head>
   <body>
 <div id="particle-container">
